--- a/client/src/components/List/NameEdit.module.scss
+++ b/client/src/components/List/NameEdit.module.scss
@@ -11,12 +11,18 @@
     outline: none;
     padding: 4px 8px;
     resize: none;
-    width: 100%;
+    width: 236px;
 
     &:focus {
       background: #fff;
       border-color: #5ba4cf;
       box-shadow: 0 0 0 1px #5ba4cf;
     }
+  }
+
+  .wrapper {
+    width: 236px;
+    position: relative;
+    float: left;
   }
 }
