--- a/client/src/globalStyles.module.scss
+++ b/client/src/globalStyles.module.scss
@@ -33,4 +33,17 @@
       background-color: #646464;
     }
   }
+
+  .iconButton {
+    background: none;
+    box-shadow: none;
+    color: #686868;
+    margin: 0;
+    padding: 0;
+    min-height: 10px;
+
+    &:hover {
+      color: #000000;
+    }
+  }
 }
